# aethercal

./: .dockerignore  .gitattributes  .gitignore  .sesskey  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  UPGRADING.md  conftest.py  pyproject.toml  pytest_network_guard.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
apps/booking/: pyproject.toml
apps/booking/src/aethercal/booking/: __init__.py  __main__.py  app.py  errors.py  forms.py  i18n.py  settings.py  timefmt.py  views.py
apps/booking/src/aethercal/booking/static/: embed-demo.html  embed.js  tz-detect.js
apps/booking/tests/: test_app_routes.py  test_booking_branding.py  test_booking_settings.py  test_embed.py  test_embed_js.py  test_errors.py  test_forms.py  test_i18n.py  test_session_key.py  test_timefmt.py  test_views.py
apps/server/: pyproject.toml
apps/server/src/aethercal/server/: app.py  channels.py  cli.py  client_ip.py  crypto.py  deps.py  observability.py  passwords.py  scheduler.py  settings.py  worker.py
apps/server/src/aethercal/server/admin/: __init__.py  app.py  auth.py  bootstrap.py  config.py  format.py  mount.py  pages.py  passwords.py  ratelimit.py  runtime.py  service.py  state.py
apps/server/src/aethercal/server/api/: __init__.py  auth.py  bookings.py  branding.py  event_types.py  health.py  metrics.py  operator.py  public.py  ratelimit.py  schedules.py  slots.py  webhooks.py  webhooks_inbound.py  workflows.py
apps/server/src/aethercal/server/db/: __init__.py  base.py  config.py  encrypted.py  engine.py  guc.py  migrate.py  pools.py  rls.py  roles.py
apps/server/src/aethercal/server/db/migrations/: env.py
apps/server/src/aethercal/server/db/migrations/versions/: 0001_initial_schema.py  0002_busy_cache_coverage.py  0003_outbox_and_sequence.py  0004_event_type_translations.py  0005_workflows_and_noshow.py  0006_webhook_delivery_reason.py  0007_user_email_ci_unique.py  0008_rls_roles_and_policies.py  0009_memberships_and_roles.py  0010_tenant_credentials.py  0011_booking_source_ip.py  0012_booking_confirmed_at.py  0013_payments_and_holds.py  0014_tenant_branding.py  0015_payments_and_holds.py  0016_grant_alembic_version.py  0017_outbox_skip_reason.py
apps/server/src/aethercal/server/db/models/: __init__.py  booking.py  credentials.py  integrations.py  notifications.py  outbox.py  payments.py  scheduling.py  tenancy.py  webhooks.py  workflows.py
apps/server/src/aethercal/server/integrations/: __init__.py  mercadopago.py  money.py  stripe.py  turnstile.py
apps/server/src/aethercal/server/integrations/calcom/: __init__.py  contract.py
apps/server/src/aethercal/server/integrations/google/: __init__.py  calendar.py  oauth.py  parse.py  spike.py
apps/server/src/aethercal/server/integrations/messaging/: __init__.py  guard.py  status.py
apps/server/src/aethercal/server/integrations/sms/: __init__.py  config.py  sender.py
apps/server/src/aethercal/server/integrations/smtp/: __init__.py  compose.py  config.py  invite.py  sender.py
apps/server/src/aethercal/server/integrations/whatsapp/: __init__.py  config.py  sender.py
apps/server/src/aethercal/server/jobs/: __init__.py  reminders.py
apps/server/src/aethercal/server/services/: __init__.py  api_keys.py  bookings.py  branding.py  calendars.py  event_types.py  guest_tokens.py  key_rotation.py  memberships.py  notifications.py  outbox.py  payment_webhooks.py  payments.py  privacy.py  rbac.py  schedules.py  slots.py  templates.py  tenant_credentials.py  tenant_resolution.py  tenant_senders.py  users.py  webhooks.py  workflow_rules.py  workflows.py
apps/server/src/aethercal/server/webhooks/: __init__.py  allowlist.py  delivery.py  pinning.py  signing.py  ssrf.py
apps/server/tests/: conftest.py  test_admin_auth.py  test_admin_bootstrap.py  test_admin_branding.py  test_admin_calendar.py  test_admin_config.py  test_admin_format.py  test_admin_hosts.py  test_admin_metrics.py  test_admin_mount.py  test_admin_passwords.py  test_admin_ratelimit.py  test_admin_rbac.py  test_admin_service.py  test_admin_session_belt.py  test_admin_state.py  test_admin_timeline.py  test_admin_workflows.py  test_alembic_config.py  test_api_keys_service.py  test_api_keys_unit.py  test_app.py  test_auth.py  test_auth_api.py  test_booking_concurrency.py  test_booking_google_wiring.py  test_booking_page_consent_pg.py  test_booking_state_machine.py  test_bookings_api.py  test_bookings_service.py  test_boot_head_check.py  test_branding_service.py  test_bypass_belt.py  test_calcom_contract.py  test_calendar_target_concurrency.py  test_calendars_service.py  test_calendars_targets.py  test_channel_guard.py  test_channels.py  test_cli.py  (+88 more)
apps/server/tests/db/: conftest.py  test_boot_migrator.py  test_db_config.py  test_migration_parity.py  test_migration_pg.py  test_migration_user_email_ci.py  test_models_metadata.py  test_multihost_schema.py  test_reminder_cutover.py
apps/server/tests/fixtures/calcom/: README.md  booking_cancelled.json  booking_created.json  booking_rescheduled.json
apps/server/tests/rls/: conftest.py  test_branding_isolation.py  test_byok_credentials.py  test_byok_senders.py  test_rbac_isolation.py  test_rls_isolation.py
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
deploy/sql/: provision_roles.sql
docs/: README.md  byok-credentials.md  calendar-component.md  embedding.md  phone-channels.md  privacy.md  quickstart.md  sdk.md  webhooks.md
docs/design/: batch-a-workflows-and-connected-calendar.md
docs/es/: README.md  inicio.md  quickstart.md
docs/spikes/: f0-10-reflex-tsx.md  f0-11-google-calendar-runner.py  f0-11-google-calendar.md  f2-dr-react-dedupe.md
e2e/: .gitignore  README.md  compose.e2e.yml  global-setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/scripts/: deploy.env.template  stack-down.sh  stack-up.sh
e2e/src/: api.ts  (+5 more)
examples/: README.md
loadtest/: README.md  slots.js
(+17 files in other folders)
