# AetherCal — monorepo workspace root (virtual; not a published package).
# One uv.lock for the whole workspace, one shared .venv, cross-editable members.

[project]
name = "aethercal-dev"
version = "0.0.0"
description = "AetherCal monorepo development workspace (not published)"
requires-python = ">=3.11"
dependencies = [
    "aethercal-core",
    "aethercal-schemas",
    "aethercal-client",
    "aethercal-ui",
    "aethercal",
    "aethercal-server",
    "aethercal-booking",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
aethercal-core = { workspace = true }
aethercal-schemas = { workspace = true }
aethercal-client = { workspace = true }
aethercal-ui = { workspace = true }
aethercal = { workspace = true }
aethercal-server = { workspace = true }
aethercal-booking = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-benchmark>=4",
    "hypothesis>=6.100",
    # Independent oracle for cross-checking our recurrence expansion (test-only, never runtime —
    # using it both to expand and to verify would make the cross-check circular).
    "recurring-ical-events>=3",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2",
    "poethepoet>=0.29",
]

# --------------------------------------------------------------------------------------
# Task runner (poethepoet) — `uv run poe <task>`
# --------------------------------------------------------------------------------------
[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "pyright"
imports = "lint-imports"

[tool.poe.tasks.check]
help = "Run the full gate: format-check, lint, typecheck, import contracts, tests."
sequence = [
    { cmd = "ruff format --check ." },
    { cmd = "ruff check ." },
    { cmd = "pyright" },
    { cmd = "lint-imports" },
    { cmd = "pytest" },
]

[tool.poe.tasks.fetch-js-bundle]
help = "Fetch the prebuilt aethercal-ui JS bundle for contributors without Node (added in F0-10/F2)."
cmd = "python -c \"print('fetch-js-bundle: implemented alongside the aethercal-ui bundle in F0-10/F2')\""

# --------------------------------------------------------------------------------------
# Tooling config (shared across the workspace)
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages", "apps"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["aethercal"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/aethercal-core/src", "packages/aethercal-schemas/src", "packages/aethercal-client/src", "packages/aethercal-ui/src", "packages/aethercal/src", "apps/server/src", "apps/booking/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF", "TID"]
ignore = ["PLR2004"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004", "S101"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["packages", "apps"]
exclude = ["**/node_modules", "**/.venv", "**/__pycache__"]

# --------------------------------------------------------------------------------------
# import-linter — enforces the dependency rules from AetherCal-02-Plan §3.
# core depends on NOTHING internal; the rest layer above it.
# --------------------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["aethercal"]

[[tool.importlinter.contracts]]
name = "core is pure — no internal dependencies"
type = "forbidden"
source_modules = ["aethercal.core"]
forbidden_modules = [
    "aethercal.schemas",
    "aethercal.client",
    "aethercal.ui",
    "aethercal.server",
    "aethercal.booking",
    "aethercal.cli",
]

[[tool.importlinter.contracts]]
name = "layered architecture (date logic lives only in core)"
type = "layers"
layers = [
    "aethercal.server | aethercal.booking",
    "aethercal.client",
    "aethercal.schemas",
    "aethercal.core",
]
ignore_imports = []
