# AetherCal — monorepo workspace root (virtual; not a published package).
# One uv.lock for the whole workspace, one shared .venv, cross-editable members.

[project]
name = "aethercal-dev"
version = "0.0.0"
description = "AetherCal monorepo development workspace (not published)"
requires-python = ">=3.11"
dependencies = [
    "aethercal-core",
    "aethercal-schemas",
    "aethercal-client",
    # The `reflex` extra is requested here (not in aethercal-ui's own bare dependency list) so the
    # single monorepo dev venv always has what `uv run poe check` needs to type-check/test
    # aethercal-ui, while a standalone `pip install aethercal-ui` stays lean by default and opts in
    # with `aethercal-ui[reflex]`. See docs/spikes/f0-10-reflex-tsx.md for the full rationale.
    "aethercal-ui[reflex]",
    "aethercal",
    # `google` extra requested here (same reasoning as aethercal-ui[reflex]): the single dev venv
    # gets the Google SDKs the F0-11 spike + `uv run poe check` need, while a standalone
    # `pip install aethercal-server` stays lean. See docs/spikes/f0-11-google-calendar.md.
    "aethercal-server[google]",
    "aethercal-booking",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
aethercal-core = { workspace = true }
aethercal-schemas = { workspace = true }
aethercal-client = { workspace = true }
aethercal-ui = { workspace = true }
aethercal = { workspace = true }
aethercal-server = { workspace = true }
aethercal-booking = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-benchmark>=4",
    # Async test support for the FastAPI server layer (F1-17+). `asyncio_mode = "auto"` (below)
    # lets async tests/fixtures run without a per-test marker; aiosqlite gives the offline,
    # in-memory AsyncSession the service-layer TDD runs against (no Postgres needed).
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "hypothesis>=6.100",
    # Independent oracle for cross-checking our recurrence expansion (test-only, never runtime —
    # using it both to expand and to verify would make the cross-check circular).
    "recurring-ical-events>=3",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2",
    "poethepoet>=0.29",
]

# --------------------------------------------------------------------------------------
# Task runner (poethepoet) — `uv run poe <task>`
# --------------------------------------------------------------------------------------
[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "pyright"
imports = "lint-imports"

[tool.poe.tasks.check]
help = "Run the full gate: format-check, lint, typecheck, import contracts, tests."
sequence = [
    { cmd = "ruff format --check ." },
    { cmd = "ruff check ." },
    { cmd = "pyright" },
    { cmd = "lint-imports" },
    { cmd = "pytest" },
]

# OBSOLETE (F2-H, deliberately not implemented): `fetch-js-bundle` existed to repopulate the JS
# bundle for source/editable installs back when it was gitignored. That premise is gone — the
# bundle is now COMMITTED (docs/spikes/f0-10-reflex-tsx.md, "Resolution at F0 integration"), so a
# fresh clone / `uv sync` already has it on disk; there is nothing to fetch. Building it from source
# after a TSX change is `pnpm build` in packages/aethercal-ui/js (guarded by CI's rebuild-and-diff
# drift guard), and releasing it is `scripts/build_release.py` (anti wheel-without-asset). This task
# is kept only to explain that if an old doc/muscle-memory still invokes it, and to verify the
# committed bundle is actually present.
[tool.poe.tasks.fetch-js-bundle]
help = "OBSOLETE: the JS bundle is committed (no fetch needed). Verifies it exists; see the comment."
cmd = "python packages/aethercal-ui/scripts/verify_bundle.py"

[tool.poe.tasks.gen-schema]
help = "Regenerate calendar-props.schema.json from the Python payload TypedDicts (F2-D contract)."
cmd = "python packages/aethercal-ui/scripts/gen_calendar_schema.py"

# --------------------------------------------------------------------------------------
# Tooling config (shared across the workspace)
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages", "apps"]
xfail_strict = true
filterwarnings = ["error"]
# Async tests/fixtures (the server layer) run without a per-test marker. The explicit
# fixture-loop-scope silences pytest-asyncio's "unset" PytestDeprecationWarning, which
# `filterwarnings = ["error"]` would otherwise promote to a hard failure.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    # Opt-in tests that need a real PostgreSQL server (autogenerate parity, the boot advisory
    # lock). They skip unless AETHERCAL_TEST_DATABASE_URL is set, so the default matrix
    # (ubuntu+windows, no Docker) stays green; a dedicated CI job with a postgres service runs them.
    "db: requires a real PostgreSQL database (set AETHERCAL_TEST_DATABASE_URL)",
]

[tool.coverage.run]
branch = true
source = ["aethercal"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/aethercal-core/src", "packages/aethercal-schemas/src", "packages/aethercal-client/src", "packages/aethercal-ui/src", "packages/aethercal/src", "apps/server/src", "apps/booking/src"]
# Alembic version scripts are generated (autogenerate), not hand-authored — the hand-written
# migration env lives one level up and is linted. Excluding only versions/ keeps CI green without
# reformatting machine-emitted DDL.
extend-exclude = ["apps/server/src/aethercal/server/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF", "TID"]
ignore = ["PLR2004"]

# FastAPI dependency injection (`Depends(...)`) and Typer parameter declarations
# (`Option(...)`/`Argument(...)`) intentionally call these in argument positions; they are the
# framework's declaration API, not the mutable-default footgun B008 targets.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "typer.Option",
    "typer.Argument",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004", "S101"]
# The booking page's view builders are presentational functions: each takes the data it renders
# (event, slots, tz, labels, urls, errors), so a higher argument count is inherent, not a smell.
"apps/booking/src/aethercal/booking/views.py" = ["PLR0913"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# Type-check the shipped library source strictly; test code is validated by execution, not pyright
# (tests exercise loosely-typed scheduling libraries where strict typing is noise, not safety).
include = [
    "packages/aethercal-core/src",
    "packages/aethercal-schemas/src",
    "packages/aethercal-client/src",
    "packages/aethercal-ui/src",
    "packages/aethercal/src",
    "apps/server/src",
    "apps/booking/src",
]
exclude = [
    "**/node_modules",
    "**/.venv",
    "**/__pycache__",
    # Generated Alembic version scripts (the hand-written migration env one level up is checked).
    "apps/server/src/aethercal/server/db/migrations/versions",
]
# Untyped third-party libraries (icalendar, recurring-ical-events) produce "unknown type"
# cascades under strict mode. We silence only that family — our own code stays strictly
# annotated (missing parameter/return/type-argument annotations still error).
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"

# --------------------------------------------------------------------------------------
# import-linter — enforces the dependency rules from AetherCal-02-Plan §3.
# core depends on NOTHING internal; the rest layer above it.
# --------------------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["aethercal"]

[[tool.importlinter.contracts]]
name = "core is pure — no internal dependencies"
type = "forbidden"
source_modules = ["aethercal.core"]
forbidden_modules = [
    "aethercal.schemas",
    "aethercal.client",
    "aethercal.ui",
    "aethercal.server",
    "aethercal.booking",
    "aethercal.cli",
]

[[tool.importlinter.contracts]]
name = "layered architecture (date logic lives only in core)"
type = "layers"
layers = [
    "aethercal.server | aethercal.booking",
    "aethercal.client",
    "aethercal.schemas",
    "aethercal.core",
]
ignore_imports = []
