[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethercal-booking"
version = "0.0.0"
description = "AetherCal public booking page (FastHTML + HTMX)"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AetherLogik" }]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Typing :: Typed"]
# The stateless public booking page: FastHTML (SSR + HTMX) on top of the AetherCal SDK. The app
# only ever reaches the API through the SDK (the D4 rule), so it depends on the client + the shared
# schemas (for the typed request/response DTOs), never on the server or core directly.
dependencies = [
    "python-fasthtml>=0.14.9",
    "aethercal-client",
    "aethercal-schemas",
    # The published-placeholder guard (aethercal.core.placeholders) — the ONE place that answers
    # "is this value one the repository prints?", shared with the server so the rule cannot drift.
    # Declared directly rather than leaned on transitively through client -> schemas -> core: this
    # page imports it in its own right, which is the same reasoning the server states for icalendar.
    "aethercal-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aethercal"]
