[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethercal-server"
version = "0.0.0"
description = "AetherCal server: FastAPI API v1 + Reflex admin"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AetherLogik" }]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Typing :: Typed"]
# The persistence layer (F1-01) is the server's foundation, so SQLAlchemy, Alembic and the
# Postgres driver are hard dependencies: the server cannot run without a database. psycopg 3 is a
# single driver that serves both the async application engine and the sync Alembic/boot migrator.
# aethercal-core is imported for the shared domain vocabulary (e.g. BookingStatus). FastAPI /
# Reflex are added as their layers land later in F1. The Google Calendar SDKs stay an optional
# extra (see below) so a bare `pip install aethercal-server` skips them until F1-07.
dependencies = [
    "aethercal-core",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aethercal"]
