[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethercal-server"
version = "0.0.0"
description = "AetherCal server: FastAPI API v1 + Reflex admin"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AetherLogik" }]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Typing :: Typed"]
# The persistence layer (F1-01) is the server's foundation, so SQLAlchemy, Alembic and the
# Postgres driver are hard dependencies: the server cannot run without a database. psycopg 3 is a
# single driver that serves both the async application engine and the sync Alembic/boot migrator.
# aethercal-core is imported for the shared domain vocabulary (e.g. BookingStatus).
#
# The F1 foundation (Ola 0) adds the web/runtime stack the later waves all extend:
#   - fastapi + uvicorn: the ASGI app and its production server.
#   - pydantic-settings: env-sourced Settings (RF-19, no secrets in source).
#   - cryptography: Fernet key (derived from app_secret) that encrypts stored provider
#     credentials once F1-07 (Google) lands.
#   - apscheduler: the in-process scheduler that the busy-cache sync / reminder jobs run on.
#   - aiosmtplib: async SMTP for the transactional `.ics` email.
#   - typer: the `aethercal-admin` CLI (create tenant, issue API key).
#   - httpx: the API client + FastAPI TestClient transport.
#   - itsdangerous: signs the public guest booking tokens (GuestToken) in a later wave.
# All are declared now so later feature waves need zero dependency changes.
# The Google Calendar SDKs stay an optional extra (see below) so a bare
# `pip install aethercal-server` skips them until F1-07.
dependencies = [
    "aethercal-core",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.4",
    "cryptography>=43",
    "apscheduler>=3.10",
    "aiosmtplib>=3.0",
    # Builds the .ics calendar invite attached to booking emails (F1-08). Declared directly here
    # because the server imports it in its own right, not merely transitively through aethercal-core.
    "icalendar>=6",
    "typer>=0.12",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    # The single-user Reflex admin (F1-11, RF-18) lives in aethercal.server.admin and runs
    # in-process, calling the service layer directly. Its state handlers and pages import reflex, so
    # it is a direct server dependency. Pinned narrowly (< 0.10) per the F0-10 spike's version-
    # fragility note; already resolved in the workspace lock via aethercal-ui[reflex].
    "reflex>=0.9.6.post1,<0.10",
    # F2-F: the admin agenda ADOPTS the bundled calendar component (aethercal.ui.Calendar), so the
    # component (and its committed JS bundle) is now a direct server dependency, not merely a dev
    # convenience. The [reflex] extra brings the reflex the wrapper needs (already server-pinned).
    "aethercal-ui[reflex]",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]

# The agency admin CLI: `aethercal-admin create-tenant …` / `aethercal-admin issue-api-key …`.
# `aethercal-serve` runs uvicorn on the env-built app factory (F1-12 self-host entrypoint):
# it is equivalent to `uvicorn --factory aethercal.server.app:create_app_from_env`.
[project.scripts]
aethercal-admin = "aethercal.server.cli:app"
aethercal-serve = "aethercal.server.app:serve"
# The worker. A SEPARATE PROCESS, not a flag on the web one: `AETHERCAL_RUN_SCHEDULER=1` bound every
# tick to the request path's sessionmaker, which under row-level security carries no business and
# therefore selects zero rows — silently. It runs the drain + webhook delivery + busy-cache refresh
# on two pools (a BYPASSRLS one to FIND work, the app one to EXECUTE it under RLS) and serves the
# operator surface (/metrics, /health/ready with the backlog). Run EXACTLY ONE — see deploy/README.
aethercal-worker = "aethercal.server.worker:run_worker"

[tool.hatch.build.targets.wheel]
packages = ["src/aethercal"]
